# AgenticAI-Lab-

./: .coderabbit.yml  .gitignore  DEPLOYMENT.md  FINAL_REPORT.md  Makefile  PRD.txt  PROJECT_STATUS.md  README.md  create-github-repo.md  docker-compose.yml  env.example  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  test_api.py
agents/: __init__.py  base.py
api/: __init__.py  config.py  fixed_backend.py  health_check.py  main.py  middleware.py  minimal_server.py  simple_main.py  test_server.py
api/db/: database.py
api/routers/: admin.py  agents.py  auth.py  jobs.py  webhooks.py
monitoring/grafana/dashboards/: agenticai-overview.json
monitoring/prometheus/: prometheus.yml
orchestration/rabbitmq/: definitions.json
orchestration/temporal/config/dynamicconfig/: development-sql.yaml
scripts/: download-models.py  init-db.sql  setup.sh
scripts/windows/: dev.bat  setup.ps1
web/: .eslintrc.json  next.config.js  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/dashboard/: page.tsx
web/src/components/: providers.tsx
